Wed Dec  3 03:33:01 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/tsql.txt updated and clarified (I hope)
	* doc/userguide.sgml applied Freddy's modified patch and more
	* src/tds/config.c bad entries written to stderr
	
Wed Dec 03 08:12:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am src/tds/encodings.h:
	* src/tds/sybase_character_sets.h:
	* src/tds/sybase_character_sets.h.pl:
	- fix make on snapshot

Tue Dec 02 18:40:08 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/character_sets.h src/tds/encodings.h:
	- updated tables for ISO-2022-* charsets

Mon Dec 01 08:34:27 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/tables.sql src/odbc/Makefile.am:
	- removed tables.sql

Sun Nov 30 14:23:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/preperror.c(added):
	- added a test from Nathaniel Talbott issue
	* src/tds/token.c: fixed core

Sun Nov 30 13:42:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am src/tds/encodings.h:
	- updated encodings.h
	- added a charset target to make to update encodings.h

Sun Nov 30 13:00:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/tds.h src/ctlib/cs.c:
	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c:
	- applied Alex Kiesel patch on UNI(VAR)CHAR
	* src/odbc/odbc.c: 
	- assert statement is the current one on SQLMoreResults
	* src/tds/character_sets.h: update

Sat Nov 29 22:04:10 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/odbc/odbc.c 
	- applied 2-line  patch from nj-freetds@talbott.ws
	- Cf. 25 Nov 2003, "ODBC SQLExecute succeeds when it shouldn't"
	
Fri Nov 28 17:52:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: updated to 0.62 version
	* include/tds.h src/tds/mem.c src/tds/query.c:
	* src/tds/token.c:
	- fix for Sybase and prepare using blobs
	  (emulate prepared statements)
