@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.113 2003/11/25 15:42:59 freddy77 Exp $
+dnl $Id: configure.in,v 1.114 2003/12/03 09:37:09 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -275,9 +275,11 @@ if test "$with_odbc_nodm"; then
 	odbc=true
 fi
 
+if test "$odbc" != "true"; then
 AC_ARG_ENABLE(odbc,
 	AC_HELP_STRING([--disable-odbc], [do not attempt to build odbc the driver]),
 	[build_odbc=$enableval], [build_odbc=yes])
+fi
 AM_CONDITIONAL(INCODBC, test "$build_odbc" = "yes")
   
 if test "$build_odbc" = "yes"
@@ -296,10 +298,10 @@ then
 	fi
 	if test "$odbc" = "true"; then
 		if test "$unixodbc" = "true"; then
-			AC_CHECK_LIB(odbcinst, SQLGetPrivateProfileString, [ODBCLIB="$ODBCLIB -lodbcinst"
+			AC_CHECK_LIB(odbcinst, SQLGetPrivateProfileString, [ODBCINSTLIB="-lodbcinst"
 	AC_DEFINE_UNQUOTED(HAVE_SQLGETPRIVATEPROFILESTRING, 1, [Define to 1 if you have the SQLGetPrivateProfileString function.])])
 		elif test "$iodbc" = "true"; then
-			AC_CHECK_LIB(iodbcinst, SQLGetPrivateProfileString, [ODBCLIB="$ODBCLIB -liodbcinst"
+			AC_CHECK_LIB(iodbcinst, SQLGetPrivateProfileString, [ODBCINSTLIB="-liodbcinst"
 	AC_DEFINE_UNQUOTED(HAVE_SQLGETPRIVATEPROFILESTRING, 1, [Define to 1 if you have the SQLGetPrivateProfileString function.])])
 		fi
 	fi
@@ -313,6 +315,7 @@ AM_CONDITIONAL(UNIXODBC, test "$unixodbc" = "true")
 AC_SUBST(ODBC)
 AC_SUBST(ODBC_INC)
 AC_SUBST(ODBCLIB)
+AC_SUBST(ODBCINSTLIB)
 AC_SUBST(ODBCNODMLIB)
 
 AC_ARG_ENABLE(apps,
